--- a/about/index.html
+++ b/about/index.html
@@ -94,6 +94,9 @@
                 <a class="nav-link" href="/blog_off-policy-grpo/about/">about<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item ">
+                <a class="nav-link" href="/blog_off-policy-grpo/">Krafton AI Blog</a>
+              </li>
+              <li class="nav-item ">
                 <a class="nav-link" href="/blog_off-policy-grpo/blog/index.html">blog</a>
               </li>
 
