deploy: ba0dc304d3a57283cd9efcebcf364f038d651a71

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Styles -->
     
-    <link rel="shortcut icon" href="/blog/assets/img/iclr_favicon.ico"/>
+    <link rel="shortcut icon" href="/blog/assets/img/krafton_favicon.png"/>
     
     <link rel="stylesheet" href="/blog/assets/css/main.css">
     <link rel="canonical" href="https://krafton-ai.github.io/blog/">
