--- a/llm_post_training/index.html
+++ b/llm_post_training/index.html
@@ -94,7 +94,7 @@ ${academicLFI}, "${title}", ICLR Blogposts, 2025.
 
     <!-- Styles -->
     
-    <link rel="shortcut icon" href="/blog/assets/img/iclr_favicon.ico"/>
+    <link rel="shortcut icon" href="/blog/assets/img/krafton_favicon.png"/>
     
     <link rel="stylesheet" href="/blog/assets/css/main.css">
     <link rel="canonical" href="https://krafton-ai.github.io/blog/llm_post_training/">
