deploy: 9a2fbd16a6d80cb19836172846e868ee2292edc0

--- a/404.html
+++ b/404.html
@@ -62,7 +62,7 @@
             <span class="icon-bar bottom-bar"></span>
           </button>
 
-          <!-- [#&lt;Jekyll::Page @relative_path=&quot;404.html&quot;&gt;, #&lt;Jekyll::Page @relative_path=&quot;_pages/about.md&quot;&gt;, #&lt;Jekyll::Page @relative_path=&quot;index.md&quot;&gt;, #&lt;Jekyll::Page @relative_path=&quot;assets/css/main.scss&quot;&gt;, #&lt;Jekyll::Page @relative_path=&quot;robots.txt&quot;&gt;, #&lt;Jekyll:Archive @type=year @title={year: &quot;2025&quot;} @data={&quot;layout&quot; =&gt; &quot;archive-year&quot;}&gt;, #&lt;JekyllFeed::PageWithoutAFile @relative_path=&quot;feed.xml&quot;&gt;, #&lt;Jekyll::PaginateV2::Generator::PaginationPage @relative_path=&quot;.html&quot;&gt;, #&lt;Jekyll::PageWithoutAFile @relative_path=&quot;sitemap.xml&quot;&gt;] -->
+          <!-- [#&lt;Jekyll::Page @relative_path=&quot;404.html&quot;&gt;, #&lt;Jekyll::Page @relative_path=&quot;_pages/about.md&quot;&gt;, #&lt;Jekyll::Page @relative_path=&quot;blog/index.html&quot;&gt;, #&lt;Jekyll::Page @relative_path=&quot;index.md&quot;&gt;, #&lt;Jekyll::Page @relative_path=&quot;assets/css/main.scss&quot;&gt;, #&lt;Jekyll::Page @relative_path=&quot;robots.txt&quot;&gt;, #&lt;Jekyll:Archive @type=year @title={year: &quot;2025&quot;} @data={&quot;layout&quot; =&gt; &quot;archive-year&quot;}&gt;, #&lt;JekyllFeed::PageWithoutAFile @relative_path=&quot;feed.xml&quot;&gt;, #&lt;Jekyll::PageWithoutAFile @relative_path=&quot;sitemap.xml&quot;&gt;] -->
 
           <div class="collapse navbar-collapse text-right" id="navbarNav">
             <ul class="navbar-nav ml-auto flex-nowrap">
@@ -88,11 +88,9 @@
                 <a class="nav-link" href="https://iclr-blog-track.github.io/home/">2022 edition <u>⤤</u></a>
               </li> -->
 
-              <!-- Other pages -->
-              <li class="nav-item ">
+              <!-- Other pages -->              <li class="nav-item ">
                 <a class="nav-link" href="/blog/about/">about</a>
-              </li>
-              <li class="nav-item ">
+              </li>              <li class="nav-item ">
                 <a class="nav-link" href="/blog/">Krafton AI Blog</a>
               </li>
 
