deploy: 8705567e9addc63b0ede415701591a62c677a0fb

--- a/llm_post_training_en/index.html
+++ b/llm_post_training_en/index.html
@@ -146,6 +146,9 @@ ${academicLFI}, "${title}", Blogposts, 2025.
   padding-left: 1em;
   margin-top: 0;
   margin-bottom: 0;
+} a[href="https://huggingface.co/KRAFTON"] {
+  color: #007bff !important;
+  font-weight: bold;
 }
 
     </style>
@@ -581,7 +584,7 @@ These results indicate an absence of any catastrophic forgetting during the cont
 <p>Additionally, off-policy GRPO is highly efficient as it recycles the teacher model’s trajectories without direct rollout during the training process. 
 We therefore achieved performance comparable to or better than existing reinforcement learning methods while significantly reducing computational cost.
 Being compute-efficient yet strong in performance, we believe that our proposed continual post-training methodology is attractive to many practitioners, and expect it to be useful across various domains and applications.
-Finally, we have publicly released all the evaluated models on <a href="https://huggingface.co/KRAFTON" target="_blank" rel="noopener noreferrer">huggingface</a> to contribute to the open-source community and to make our results reproducible.</p>
+Finally, we have publicly released all the evaluated models on <a href="https://huggingface.co/KRAFTON" target="_blank" rel="noopener noreferrer">HuggingFace</a> to contribute to the open-source community and to make our results reproducible.</p>
 
       </d-article>
 
