--- a/llm_post_training_kr/index.html
+++ b/llm_post_training_kr/index.html
@@ -146,6 +146,9 @@ ${academicLFI}, "${title}", Blogposts, 2025.
   padding-left: 1em;
   margin-top: 0;
   margin-bottom: 0;
+} a[href="https://huggingface.co/KRAFTON"] {
+  color: #007bff !important;
+  font-weight: bold;
 }
 
     </style>
