deploy: d0fb6a8c8b1ac26e7880ea4346c31c65a5479273

--- a/llm_post_training_kr/index.html
+++ b/llm_post_training_kr/index.html
@@ -146,7 +146,7 @@ ${academicLFI}, "${title}", Blogposts, 2025.
   padding-left: 1em;
   margin-top: 0;
   margin-bottom: 0;
-} a[href="https://huggingface.co/KRAFTON"] {
+} a[href="https://huggingface.co/collections/KRAFTON/offline-grpo-6888396558def99dd878097c"] {
   color: #007bff !important;
   font-weight: bold;
 }
